syntax = "proto3";

option optimize_for = SPEED;
option csharp_namespace = "TeamNote.Protocol";

message MessageRequestClientPublic {
	int64 ClientId = 1;
}